# ChangeLog for dev-util/mono-tools
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/mono-tools/ChangeLog,v 1.8 2006/01/22 09:52:51 dertobi123 Exp $

  22 Jan 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  mono-tools-1.1.10.ebuild:
  Marked ppc stable

  22 Jan 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  mono-tools-1.1.10.ebuild:
  stable on x86

*mono-tools-1.1.11 (15 Jan 2006)

  15 Jan 2006; Peter Johanson <latexer@gentoo.org>
  +mono-tools-1.1.11.ebuild:
  Bumpity bump.

  27 Nov 2005; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/mono-tools-1.1.10-fix-desktop-entry.patch,
  mono-tools-1.1.10.ebuild:
  Fixing desktop entry creation.

  21 Nov 2005; Joseph Jezak <josejx@gentoo.org> mono-tools-1.1.10.ebuild:
  Marked ~ppc for bug #109401.

  14 Nov 2005; Herbie Hopkins <herbs@gentoo.org> mono-tools-1.1.10.ebuild:
  Add multilib fixes and mark ~amd64 wrt bug 109401.

*mono-tools-1.1.10 (14 Nov 2005)

  14 Nov 2005; Peter Johanson <latexer@gentoo.org>
  +mono-tools-1.1.10.ebuild:
  Bump.

*mono-tools-1.1.9 (15 Oct 2005)

  15 Oct 2005; Peter Johanson <latexer@gentoo.org> +metadata.xml,
  +mono-tools-1.1.9.ebuild:
  First commit. Includes the GUI browser previously found in the monodoc
  package, plus a few other programs.
