@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/monodoc/Attic/monodoc-1.1.13.ebuild,v 1.2 2006/03/16 08:12:21 latexer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/monodoc/Attic/monodoc-1.1.13.ebuild,v 1.3 2006/03/20 00:29:57 metalgod Exp $
 
 inherit mono multilib
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.go-mono.com"
 SRC_URI="http://www.go-mono.com/sources/${PN}/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="amd64 ~ppc ~x86"
 IUSE=""
 DEPEND=">=dev-lang/mono-1.1"
 
